# chatterbox-selfhost

./: .env.example  .gitignore  AppHost.cs  Aspire.Host.sln  Dockerfile.cpu  Dockerfile.cuda  LICENSE  README.md  aspire.config.json  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ghcr.yml
Aspire.Host.ApiService/: Aspire.Host.ApiService.csproj  Aspire.Host.ApiService.http
Aspire.Host.ApiService/Properties/: launchSettings.json
Aspire.Host.AppHost/: AppHost.cs  Aspire.Host.AppHost.csproj
Aspire.Host.AppHost/Properties/: launchSettings.json
Aspire.Host.Web/: Aspire.Host.Web.csproj  Program.cs  WeatherApiClient.cs
Aspire.Host.Web/Components/: App.razor  _Imports.razor
Aspire.Host.Web/Components/Layout/: NavMenu.razor
Aspire.Host.Web/Properties/: launchSettings.json
Aspire.Host.Web/wwwroot/: app.css
app/: config.py  db.py  main.py  models.py  observability.py  redis_conn.py  schemas.py
app/api/routes/: health.py  profiles.py  training.py  tts.py
app/services/: chatterbox_service.py  storage.py
templates/: admin.html
tests/: conftest.py  test_chatterbox_service.py  test_health.py  test_observability.py  test_profiles.py  test_training.py  test_tts.py
trainer/: runner.py
worker/: tasks.py  worker.py
