[project]
name = "chatterbox-selfhost"
version = "0.1.0"
description = "Self-hosted Chatterbox API with training and admin portal"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.22",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "aiofiles>=24.1.0",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "httpx>=0.27.0",
  "chatterbox-tts>=0.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

