[project]
name = "chatterbox-selfhost"
version = "0.1.0"
description = "Self-hosted Chatterbox API with training and admin portal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.22",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "aiofiles>=24.1.0",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
# Heavy ML stack for actual speech synthesis. Kept out of the default install so
# the API/worker inner loop stays fast; the chatterbox service degrades
# gracefully when this isn't present. Install with: uv sync --extra tts
tts = [
  "chatterbox-tts>=0.1.4",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "trainer*", "worker*"]
