[project]
name = "chatterbox-selfhost"
version = "0.1.0"
description = "Self-hosted Chatterbox API with training and admin portal"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.22",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.4",
  "aiofiles>=24.1.0",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[project.optional-dependencies]
# Heavy ML stack for actual speech synthesis. Kept out of the default install so
# the API/worker inner loop stays fast; the chatterbox service degrades
# gracefully when this isn't present. Install with: uv sync --extra tts
tts = [
  "chatterbox-tts>=0.1.4",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  # resemble-perth (pulled in by chatterbox-tts) imports the legacy
  # pkg_resources module, which setuptools removed in 81+. Pin below that so
  # the Perth watermarker loads instead of silently disabling the model.
  "setuptools<81",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "trainer*", "worker*"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu126", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
